--- a/Sem_4/Web_Programming/Code/Sem_4.html
+++ b/Sem_4/Web_Programming/Code/Sem_4.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Index</title>
+    <title>Sem 4</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
