Added Day 4 [JS Form]

--- a/Sem_4/Web_Programming/Code/Day_1/jan17 ca257.html
+++ b/Sem_4/Web_Programming/Code/Day_1/jan17 ca257.html
@@ -2,9 +2,9 @@
 <body>
 <script>
 
-window.alert("hello there")://window is the browser window
+window.alert("hello there");//window is the browser window
 
-document.write("JS can write to webpage also <br>")://document is the current web document
+document.write("JS can write to webpage also <br>");//document is the current web document
 
 var i=56.898;
 var jargon=0x4a4;//256*4+10*16+4
